<resources>
    <string name="app_name">TableTopics</string>
    <string name="table_topics">TableTopics</string>
    <string name="string_launch_icon">\@string/Launch_icon</string>
    <string name="WelcomeText">Table Topics</string>
    <string name="technology">Technology</string>
    <string name="current_affairs">Current Affairs</string>
    <string name="travel">Travel</string>
    <string name="comedy">Comedy</string>
    <string name="history">History</string>
    <string name="sport">Sport</string>
    <string name="love">Love</string>
    <string name="fantasy">Fantasy</string>
    <string name="popular">Popular</string>
    <string name="contests">Contests</string>
    <string name="speak_now">Speak Now</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="hot_topics">Hot Topics</string>
    <string name="coaching">Coaching</string>
    <string name="Question1">Want to expand your speaking skills whether in improvised or prepared settings?</string>
    <string name="Question2">Want to evolve into the kind of speaker people listen to and remember?</string>
    <string name="Hook">Receive World Class Training from a multiple award-winning International Public Speaker!</string>
    <string name="own_the_stage">Own the Stage!</string>
    <string name="now_is_your_time">Now Is Your Time!</string>
    <string name="contact_coach">Contact coach</string>
    <string name="maximum_time">Maximum Time</string>
    <string name="record_audio">Record Audio</string>
    <string name="minimum_time">Minimum Time</string>
    <string name="theme">Theme</string>
    <string name="start">START!</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="add">add</string>
    <string name="other">Other</string>
    <string name="icon">icon</string>
    <string name="pro_tip_use_your_thinking_time">Pro Tip: Use your thinking time!</string>
    <string name="topic">Topic:</string>
    <string name="_00_00">00:00</string>
    <string name="loading">Loading...</string>
    <string name="home">Home</string>
    <string name="retry">Retry</string>
    <string name="generating_stats">Generating stats...</string>
    <string name="rate_your_performance">Rate Your Performance</string>
    <string name="skip2"><![CDATA[Skip >]]></string>
    <string name="congratulations">CONGRATULATIONS!</string>
    <string name="new_topic">New Topic</string>
    <string name="skip">Skip</string>
    <string name="stats">Stats</string>
    <string name="overview">Overview</string>
    <string name="your_profile">Your Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="to_continue_please_re_enter_your_credentials">To Continue, Please Re-Enter Your Credentials</string>
    <string name="submit">Submit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="back"><![CDATA[< Back]]></string>
    <string name="profile">Profile</string>
    <string name="recordings">Recordings</string>
    <string name="Add">Add</string>
    <string name="email_not_verified_n_click_here_to_verify">Email Not Verified!\n Click Here To Verify.</string>
</resources>