<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#055DA3"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="MissingConstraints" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50sp"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="15sp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="245dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:paddingBottom="25sp"
                android:text="@string/now_is_your_time"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#000000"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="105dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="25sp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="245dp"
                android:layout_height="50dp"
                android:text="@string/Question1"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="105dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="25sp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="245dp"
                android:layout_height="50dp"
                android:background="#FFFFFF"
                android:text="@string/Question2"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="176dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="25sp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="245dp"
                android:layout_height="50dp"
                android:text="@string/Hook"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="258dp" />

        </TableRow>

    </TableLayout>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="390dp"
        android:layout_height="97dp"
        android:background="#055DA3"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/start"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_button_bg"
            android:text="@string/contact_coach"
            android:textColor="#FFFFFF" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="390dp"
        android:layout_height="111dp"
        android:layout_marginTop="20dp"
        android:background="#055DA3"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="245dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/own_the_stage"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="258dp" />

    </TableRow>

    <include
        android:id="@+id/navigation"
        layout="@layout/element_bottom_navigation"/>

</androidx.constraintlayout.widget.ConstraintLayout>
